ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springbootapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ac6f7274394e44685804190f76c2f390-769415839.us-east-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springbootapp
            port:
              number: 8080
